namespace Helper
{
    public abstract class AnimationParameter
    {
        public const string Moving = "Moving";
        public const string AirPosition = "AirPosition";
        public const string InFloor = "InFloor";
        public const string Hit = "Hit";
        public const string Dead = "Dead";
        public const string OpenDoor = "OpenDoor";
        public const string CloseDoor = "CloseDoor";
    }
}